@@ -1,4 +1,4 @@
-$Id: History,v 1.13 2000-11-03 03:44:45 kurasige Exp $
+$Id: History,v 1.14 2000-11-03 06:15:30 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -20,6 +20,7 @@ committal in the CVS repository !
 - Fixed bugs in G4ProcTblElement::operator=
 - Remove destruction of processes in G4ProcessTable::~G4ProcessTable()
 - STL migration in G4ProcessVector 
+- Add thePILfactor and GPIL methods in G4VProcess
 
 - May 12 ,00 H.Kurashige (procman-V01-01-00)
 -  small bug fix in G4ProcessManager.cc
